{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 388,
  "lineage": "59bb947c-8f48-c29c-66c8-187619d3f39a",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:528161870096:network-acl/acl-061cd3cedd25d0210",
            "default_network_acl_id": "acl-061cd3cedd25d0210",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-061cd3cedd25d0210",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "528161870096",
            "subnet_ids": [
              "subnet-076c592fb952921de",
              "subnet-09c21b13d1eab6f1b"
            ],
            "tags": {
              "Name": "cortex-vpc-default",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "cortex-vpc-default",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e023bb0ad2a8ebbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:528161870096:route-table/rtb-03037e73391b8f932",
            "default_route_table_id": "rtb-03037e73391b8f932",
            "id": "rtb-03037e73391b8f932",
            "owner_id": "528161870096",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "cortex-vpc-default",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "cortex-vpc-default",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e023bb0ad2a8ebbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:528161870096:security-group/sg-0ddd4f56eb280161a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ddd4f56eb280161a",
            "ingress": [
              {
                "cidr_blocks": [
                  "89.207.171.153/32"
                ],
                "description": "Allow SSH from the client IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "528161870096",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cortex-vpc-default",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "cortex-vpc-default",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e023bb0ad2a8ebbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.icanhazip",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db217746f971628b",
            "arn": "arn:aws:ec2:eu-west-1:528161870096:elastic-ip/eipalloc-0db217746f971628b",
            "domain": "vpc",
            "id": "eipalloc-0db217746f971628b",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-77-176-231.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.77.176.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cortex-vpc-eu-west-1a",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "cortex-vpc-eu-west-1a",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:528161870096:internet-gateway/igw-040a2ef3127630e31",
            "id": "igw-040a2ef3127630e31",
            "owner_id": "528161870096",
            "tags": {
              "Name": "cortex-vpc",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "cortex-vpc",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e023bb0ad2a8ebbd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db217746f971628b",
            "association_id": "eipassoc-0d7f6993960210afa",
            "connectivity_type": "public",
            "id": "nat-075f58ad1a3641172",
            "network_interface_id": "eni-0ae3fe4a794f0f4f1",
            "private_ip": "10.0.101.122",
            "public_ip": "54.77.176.231",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09c21b13d1eab6f1b",
            "tags": {
              "Name": "cortex-vpc-eu-west-1a",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "cortex-vpc-eu-west-1a",
              "Project-Name": "cortex",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-051079a957a1371971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-075f58ad1a3641172",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-051079a957a137197",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-040a2ef3127630e31",
            "id": "r-rtb-0aced86b3235ea6491080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aced86b3235ea649",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:528161870096:route-table/rtb-051079a957a137197",
            "id": "rtb-051079a957a137197",
            "owner_id": "528161870096",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cortex-vpc-private-eu-west-1a",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "cortex-vpc-private-eu-west-1a",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e023bb0ad2a8ebbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:528161870096:route-table/rtb-0aced86b3235ea649",
            "id": "rtb-0aced86b3235ea649",
            "owner_id": "528161870096",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cortex-vpc-public",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "cortex-vpc-public",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e023bb0ad2a8ebbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062d5ad60ecafac88",
            "route_table_id": "rtb-051079a957a137197",
            "subnet_id": "subnet-076c592fb952921de"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb2c0a95dedbe147",
            "route_table_id": "rtb-0aced86b3235ea649",
            "subnet_id": "subnet-09c21b13d1eab6f1b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:528161870096:subnet/subnet-076c592fb952921de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076c592fb952921de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528161870096",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cortex-vpc-private-eu-west-1a",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "cortex-vpc-private-eu-west-1a",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e023bb0ad2a8ebbd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:528161870096:subnet/subnet-09c21b13d1eab6f1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c21b13d1eab6f1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528161870096",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cortex-vpc-public-eu-west-1a",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "cortex-vpc-public-eu-west-1a",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e023bb0ad2a8ebbd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:528161870096:vpc/vpc-0e023bb0ad2a8ebbd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-061cd3cedd25d0210",
            "default_route_table_id": "rtb-03037e73391b8f932",
            "default_security_group_id": "sg-0ddd4f56eb280161a",
            "dhcp_options_id": "dopt-0a9c415bfd9931661",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e023bb0ad2a8ebbd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03037e73391b8f932",
            "owner_id": "528161870096",
            "tags": {
              "Name": "cortex-vpc",
              "Project-Name": "cortex",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "cortex-vpc",
              "Project-Name": "cortex",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}